Resized all images to the same size in attempt to fix 4th column spacing to no avail, still need to use margins to get the spacing right but alignment has been improved

--- a/src/app/top-fold/top-fold.component.css
+++ b/src/app/top-fold/top-fold.component.css
@@ -28,7 +28,7 @@ img {
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 3fr);
-  grid-gap: 5px;
+  grid-gap: 8px;
 }
 #how-to, #fix, #buy, #do-more {
   display: grid;
@@ -49,9 +49,13 @@ img {
   text-decoration-color: yellowgreen;
 }
 #do-more h1 {
-  margin-top: 40px;
+  margin-top: 15px;
+  margin-bottom: 25px;
   text-decoration: underline;
   text-decoration-color: rgb(72, 139, 194);
+}
+#do-more img {
+  margin-bottom: 12px;
 }
 .type {
   font-variant: small-caps;
